# stellarium-joystick

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  resources.qrc  stellarium-joystick-win32.iss.cmake
src/: JoystickSupport.cpp  JoystickSupport.hpp
